unpackaged/main/default/objects/Unsubscribe__c/Unsubscribe__c.object-meta.xml
<CustomObject>
    <description>Manage unsubscribes from email lists. Part of unmanaged package Unsubscribe Link from Salesforce Labs. Each record represents a time a user attempted to Unsubscribe from commercial email.</description>
    <label>Unsubscribe</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Unsubscribe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unsubscribe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>