unpackaged/main/default/objects/Unsubscribe__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who initiated the unsubscribe process.</description>
    <inlineHelpText>Contact who initiated the unsubscribe process.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unsubscribe</relationshipLabel>
    <relationshipName>Unsubscribe</relationshipName>
    <type>Lookup</type>
</CustomField>